# block_puzzle_rl

./: README.md  pyproject.toml
docs/: EXPERIMENTS.md
logs/: last_run.txt
logs/ppo/PPO_1/: events.out.tfevents.1756934256.PC-MATTEO.27093.0
logs/ppo/PPO_2/: events.out.tfevents.1756934510.PC-MATTEO.28979.0
logs/ppo/PPO_3/: events.out.tfevents.1756934586.PC-MATTEO.29657.0
logs/ppo/PPO_4/: events.out.tfevents.1756934776.PC-MATTEO.31392.0
logs/ppo_seq/PPO_1/: events.out.tfevents.1756991735.cursor.3293.0
logs/ppo_seq/PPO_2/: events.out.tfevents.1756991910.cursor.3815.0
logs/ppo_seq/PPO_3/: events.out.tfevents.1756991967.cursor.4082.0
models/: linear_q_weights.npy
src/block_puzzle_rl/: __init__.py
src/block_puzzle_rl/blockpuzzle/: __init__.py  logic.py
src/block_puzzle_rl/env/: __init__.py  block_puzzle_env.py  sequential_env.py  wrappers.py
src/block_puzzle_rl/game/: __init__.py  core.py  grid.py  pieces.py  rules.py
src/block_puzzle_rl/rl/: eval_agent.py  random_agent.py  train_linear_q.py  train_ppo.py
src/block_puzzle_rl/visualization/: __init__.py  blockpuzzle_play.py  human_play.py  renderer.py
